--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,18 +21,20 @@ limitations under the License. -->
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.localetextstarter.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    >
 
     <TextView
         android:id="@+id/heading"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/standard_margin"
+        android:layout_marginStart="@dimen/standard_margin"
         android:layout_marginTop="@dimen/standard_margin"
+        android:textSize="58px"
         android:text="@string/nougat"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/product_image"
+        app:layout_constraintStart_toEndOf="@+id/product_image"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,8 +45,8 @@ limitations under the License. -->
         app:srcCompat="@drawable/nougat"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/standard_margin"
-        android:layout_marginLeft="@dimen/standard_margin"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginStart="@dimen/standard_margin"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/description"
@@ -53,10 +55,103 @@ limitations under the License. -->
         android:text="@string/description"
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@id/heading"
-        app:layout_constraintLeft_toRightOf="@id/product_image"
-        android:layout_marginLeft="@dimen/standard_margin"
-        android:layout_marginRight="@dimen/standard_margin"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintStart_toEndOf="@id/product_image"
+        android:layout_marginStart="@dimen/standard_margin"
+        android:layout_marginEnd="@dimen/standard_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:textSize="35px"
+        android:textColor="@color/black"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/data_label"
+        android:layout_marginStart="@dimen/top_margin"
+        android:layout_marginTop="@dimen/top_margin"
+        app:layout_constraintTop_toBottomOf="@id/price_item"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/expired_label"
+        android:textColor="@color/black"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/top_margin"
+        app:layout_constraintTop_toTopOf="@id/data_label"
+        app:layout_constraintStart_toEndOf="@id/data_label"
+        android:id="@+id/date"
+        android:textColor="@color/black"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/code"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="@dimen/top_margin"
+        android:textColor="@color/black"
+        />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/price_item"
+        android:layout_marginStart="@dimen/top_margin"
+        android:layout_marginTop="@dimen/top_margin"
+        app:layout_constraintTop_toBottomOf="@id/description"
+        app:layout_constraintStart_toStartOf="parent"
+        android:hint="@string/input"
+        android:textSize="25px"
+        android:textColor="@color/black"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/price_item"
+        app:layout_constraintStart_toEndOf="@id/price_item"
+        android:layout_marginStart="5dp"
+        android:text="@string/convert"
+        android:id="@+id/convert"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/price_label"
+        android:layout_marginStart="@dimen/top_margin"
+        android:layout_marginTop="@dimen/top_margin"
+        app:layout_constraintTop_toBottomOf="@id/data_label"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/price_label"
+        android:textColor="@color/black"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/top_margin"
+        app:layout_constraintTop_toTopOf="@id/price_label"
+        app:layout_constraintLeft_toRightOf="@id/price_label"
+        android:id="@+id/price"
+        android:textColor="@color/black"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/price2_label"
+        android:layout_marginStart="@dimen/top_margin"
+        android:layout_marginTop="@dimen/top_margin"
+        app:layout_constraintTop_toBottomOf="@id/price_label"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/price_label2"
+        android:textColor="@color/black"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/top_margin"
+        app:layout_constraintTop_toTopOf="@id/price2_label"
+        app:layout_constraintLeft_toRightOf="@id/price2_label"
+        android:id="@+id/price100"
+        android:textColor="@color/black"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
