--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,4 +6,10 @@
         android:orderInCategory="100"
         android:title="@string/action_help"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_change_language_indo"
+        android:orderInCategory="100"
+        android:title="@string/change_languange"
+        app:showAsAction="never" />
 </menu>
